--- a/source/index.html
+++ b/source/index.html
@@ -20,13 +20,13 @@
       <img class="logo__text" src="#" alt="Cat Energy" width="101" height="18">
     </a>
 
-    <nav class="main-nav">
+    <nav class="main-header__nav main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--current" href="#">Главная</a>
+          <a class="main-nav__link main-nav__link--current" href="index.html" aria-current="page">Главная</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
@@ -41,31 +41,31 @@
   <main class="main-container">
     <h1 class="visually-hidden">Cat Energy</h1>
     <section class="hero">
-      <h2 class="hero__title section-title section-title--index">Функциональное питание для котов</h2>
+      <h2 class="hero__title section-title">Функциональное питание для котов</h2>
       <p class="hero__desc">Занялся собой? Займись котом!</p>
-      <a class="hero__button button" href="#">Подобрать программу</a>
       <picture>
         <source type="image/png" media="(min-width: 1440px)" srcset="images/hero-desktop@1x.png 1x, images/hero-desktop@2x.png 2x" width="552" height="499">
         <source type="image/png" media="(min-width: 768px)" srcset="images/hero-tablet@1x.png 1x, images/hero-tablet@2x.png 2x" width="709" height="609">
         <img class="hero__image" src="images/hero-mobile@1x.png" srcset="images/hero-mobile@2x.png 2x" alt="Упаковка еды Cat Energy Курица" width="280" height="270">
       </picture>
+      <a class="hero__button button" href="#">Подобрать программу</a>
     </section>
 
-    <section class="catalog">
+    <section class="category">
       <h2 class="visually-hidden">Категории продукции</h2>
-      <ul class="catalog__list">
-        <li class="catalog__item catalog__item--slim">
-          <h3 class="catalog__title">похудение</h3>
-          <p class="catalog__desc">Ваш кот весит больше собаки и почти утратил способность
+      <ul class="category__list">
+        <li class="category__item category__item--slim">
+          <h3 class="category__title">похудение</h3>
+          <p class="category__desc">Ваш кот весит больше собаки и почти утратил способность
             лазить по деревьям? Пора на диету! Cat Energy Slim поможет
             вашему питомцу сбросить лишний вес.</p>
-          <a class="catalog__link" href="#">Каталог slim</a>
+          <a class="category__link" href="#">Каталог slim</a>
         </li>
-        <li class="catalog__item catalog__item--heavy">
-          <h3 class="catalog__title">набор массы</h3>
-          <p class="catalog__desc">Заработать авторитет среди дворовых котов и даже собак?
+        <li class="category__item category__item--heavy">
+          <h3 class="category__title">набор массы</h3>
+          <p class="category__desc">Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="catalog__link" href="#">Каталог pro</a>
+          <a class="category__link" href="#">Каталог pro</a>
         </li>
       </ul>
     </section>
@@ -139,11 +139,14 @@
       </address>
       <div class="contacts__map">
         <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-        <picture>
-          <source type="image/jpg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
-          <source type="image/jpg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
-          <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362">
-        </picture>
+        <noscript>
+
+          <picture>
+            <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
+            <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
+            <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362">
+          </picture>
+        </noscript>
       </div>
     </section>
   </main>
