--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,7 +20,7 @@
       <img class="logo__text" src="#" alt="Cat Energy" width="101" height="18">
     </a>
 
-    <nav class="main-nav">
+    <nav class="main-header__nav main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -29,7 +29,7 @@
           <a class="main-nav__link" href="index.html">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--current" href="#">Каталог продукции</a>
+          <a class="main-nav__link main-nav__link--current" href="catalog.html" aria-current="page">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="program.html">Подбор программы</a>
@@ -65,7 +65,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">700 ₽</dd>
+                <dd class="product-card__desc-value">700 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -73,10 +73,10 @@
         </li>
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
-                <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="172" height="196">
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-desktop@1x.png 1x, images/catalog-2-desktop@2x.png 2x" width="169" height="196">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="168" height="206">
                 <img class="product-card__image" src="images/catalog-2-mobile@1x.png" srcset="images/catalog-2-mobile@2x.png 2x" alt="Оранжевая упаковка побольше" width="84" height="100">
               </picture>
             </a>
@@ -94,7 +94,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">1000 ₽</dd>
+                <dd class="product-card__desc-value">1000 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -103,9 +103,9 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.png 1x, images/catalog-3-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.png 1x, images/catalog-3-tablet@2x.png 2x" width="164" height="175">
                 <img class="product-card__image" src="images/catalog-3-mobile@1x.png" srcset="images/catalog-3-mobile@2x.png 2x" alt="Зеленая упаковка" width="68" height="78">
               </picture>
             </a>
@@ -123,7 +123,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">700 ₽</dd>
+                <dd class="product-card__desc-value">700 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -132,9 +132,10 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-4-desktop@1x.png 1x, images/catalog-4-desktop@2x.png 2x" width="169" height="196">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="168" height="200">
                 <img class="product-card__image" src="images/catalog-4-mobile@1x.png" srcset="images/catalog-4-mobile@2x.png 2x" alt="Зеленая упаковка побольше" width="84" height="100">
               </picture>
             </a>
@@ -152,7 +153,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">1000 ₽</dd>
+                <dd class="product-card__desc-value">1000 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -161,7 +162,7 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-5-tablet@1x.png 1x, images/catalog-5-tablet@2x.png 2x" width="161" height="172">
                 <img class="product-card__image" src="images/catalog-5-mobile@1x.png" srcset="images/catalog-5-mobile@2x.png 2x" alt="Синяя упаковка" width="68" height="78">
@@ -181,7 +182,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">400 ₽</dd>
+                <dd class="product-card__desc-value">400 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -190,9 +191,10 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-6-desktop@1x.png 1x, images/catalog-6-desktop@2x.png 2x" width="169" height="196">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="168" height="200">
                 <img class="product-card__image" src="images/catalog-6-mobile@1x.png" srcset="images/catalog-6-mobile@2x.png 2x" alt="Синяя упаковка побольше" width="84" height="100">
               </picture>
             </a>
@@ -210,7 +212,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">700 ₽</dd>
+                <dd class="product-card__desc-value">700 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -219,9 +221,9 @@
 
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.png 1x, images/catalog-7-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.png 1x, images/catalog-7-tablet@2x.png 2x" width="164" height="175">
                 <img class="product-card__image" src="images/catalog-7-mobile@1x.png" srcset="images/catalog-7-mobile@2x.png 2x" alt="Фиолетовая упаковка" width="72" height="84">
               </picture>
             </a>
@@ -239,7 +241,7 @@
               </div>
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Цена</dt>
-                <dd class="product-card__desc-value">500 ₽</dd>
+                <dd class="product-card__desc-value">500 <span>&#8381;</span></dd>
               </div>
             </dl>
             <a class="product-card__button button" href="#">Заказать</a>
@@ -249,7 +251,7 @@
         <li class="catalog__item">
           <div class="product-card product-card--more">
             <h3 class="product-card__title product-card__title--icon-plus">Показать еще 100500 товаров</h3>
-            <p class="product-card__desc">
+            <p class="product-card__desc ">
               На самом деле вкусов гораздо больше!
             </p>
             <a class="product-card__button button button--secondary" href="#">Показать все</a>
@@ -266,25 +268,25 @@
         <li class="catalog-extra__item product">
           <h3 class="product__title">Сахарозаменитель</h3>
           <p class="product__count">1 упаковка (100 г)</p>
-          <p class="product__price">200 ₽</p>
+          <p class="product__price">200 <span>&#8381;</span></p>
           <button class="product__button button" type="button">Заказать</button>
         </li>
         <li class="catalog-extra__item product">
           <h3 class="product__title">Питьевая вода</h3>
           <p class="product__count">5 литров</p>
-          <p class="product__price">50 ₽</p>
+          <p class="product__price">50 <span>&#8381;</span></p>
           <button class="product__button button" type="button">Заказать</button>
         </li>
         <li class="catalog-extra__item product">
           <h3 class="product__title">Молоко</h3>
           <p class="product__count">1 литр</p>
-          <p class="product__price">100 ₽</p>
+          <p class="product__price">100 <span>&#8381;</span></p>
           <button class="product__button button" type="button">Заказать</button>
         </li>
         <li class="catalog-extra__item product">
           <h3 class="product__title">Витамины</h3>
           <p class="product__count">1 упаковка (30 г)</p>
-          <p class="product__price">300 ₽</p>
+          <p class="product__price">300 <span>&#8381;</span></p>
           <button class="product__button button" type="button">Заказать</button>
         </li>
       </ul>
@@ -299,7 +301,7 @@
 
       <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
         <label class="visually-hidden" for="subscribe-form-email">Ваш e-mail</label>
-        <input class="subscribe__form-input" type="email" name="email" id="subscribe-form-email" placeholder="кuklachev@gmail.com" required>
+        <input class="subscribe__form-input input" type="email" name="email" id="subscribe-form-email" placeholder="кuklachev@gmail.com" required>
         <button class="subscribe__form-button button" type="submit">Подписаться</button>
       </form>
     </section>
@@ -312,11 +314,13 @@
       </address>
       <div class="contacts__map">
         <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-        <picture>
-          <source type="image/jpg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
-          <source type="image/jpg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
-          <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362">
-        </picture>
+        <noscript>
+          <picture>
+            <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
+            <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
+            <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362">
+          </picture>
+        </noscript>
       </div>
     </section>
   </main>
