--- a/source/index.html
+++ b/source/index.html
@@ -22,8 +22,7 @@
         <img class="logo__image" src="images/logo-mobile.svg" alt="Логотип сайта" width="33" height="38">
       </picture>
       <picture>
-        <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-text-desktop.svg" width="118" height="21">
-        <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-text-tablet.svg" width="101" height="18">
+        <source type="image/svg+xml" media="(min-width: 768px) and (max-width: 1439px)" srcset="images/logo-text-tablet.svg" width="101" height="18">
         <img class="logo__text" src="images/logo-text-mobile.svg" alt="Cat Energy" width="101" height="18">
       </picture>
     </a>
