--- a/source/index.html
+++ b/source/index.html
@@ -99,55 +99,56 @@
     <section class="live-example">
       <h2 class="live-example__title section-title">Живой пример</h2>
 
-      <div class="live-example__inner-wrap">
-        <p class="live-example__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой
-          обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
-          привычек и по-прежнему спит по 16 часов в день.</p>
-        <dl class="live-example__list">
-          <div class="live-example__item ">
-            <dt class="live-example__term">снижение веса</dt>
-            <dd class="live-example__value">5 КГ</dd>
-          </div>
-          <div class="live-example__item">
-            <dt class="live-example__term">затрачено времени</dt>
-            <dd class="live-example__value">60 ДНЕЙ</dd>
-          </div>
-          <div class="live-example__item-total">
-            <dt class="live-example__total-term">Затраты на питание:</dt>
-            <dd class="live-example__total-value">15 000 РУБ.</dd>
-          </div>
-        </dl>
-        <div class="live-example__slider compare-slider">
-          <picture>
-            <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x" width="560" height="512">
-            <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" alt="Толстый кот" width="280" height="256">
-          </picture>
-          <picture>
-            <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x" width="560" height="512">
-            <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" alt="Худой кот" width="280" height="256">
-          </picture>
-          <div class="compare-slider__control">
-            <button class="compare-slider__control-button" type="button">
-              <span class="visually-hidden">
-                Переключить вид
-              </span>
-            </button>
-          </div>
+      <!-- <div class="live-example__inner-wrap"> -->
+      <p class="live-example__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой
+        обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
+        привычек и по-прежнему спит по 16 часов в день.</p>
+      <dl class="live-example__list">
+        <div class="live-example__item ">
+          <dt class="live-example__term">снижение веса</dt>
+          <dd class="live-example__value">5 КГ</dd>
+        </div>
+        <div class="live-example__item">
+          <dt class="live-example__term">затрачено времени</dt>
+          <dd class="live-example__value">60 ДНЕЙ</dd>
+        </div>
+        <div class="live-example__item-total">
+          <dt class="live-example__total-term">Затраты на питание:</dt>
+          <dd class="live-example__total-value">15 000 РУБ.</dd>
+        </div>
+      </dl>
+      <div class="live-example__slider compare-slider">
+        <picture>
+          <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x" width="560" height="512">
+          <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" alt="Толстый кот" width="280" height="256">
+        </picture>
+        <picture>
+          <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x" width="560" height="512">
+          <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" alt="Худой кот" width="280" height="256">
+        </picture>
+        <div class="compare-slider__control">
+          <button class="compare-slider__control-button" type="button">
+            <span class="visually-hidden">
+              Переключить вид
+            </span>
+          </button>
         </div>
       </div>
+      <!-- </div> -->
 
     </section>
 
     <section class="contacts">
-      <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
-      <address class="contacts__address-wrap">
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
-        <p class="contacts__address">Санкт-Петербург</p>
-      </address>
+      <div class="contants__inner-wrap">
+        <h2 class="contacts__title">Приглашаем<br>к сотрудничеству <br>дилеров!</h2>
+        <address>
+          <p class="contacts__address">ул. Большая <br>Конюшенная, д. 19/8</p>
+          <p class="contacts__address">Санкт-Петербург</p>
+        </address>
+      </div>
       <div class="contacts__map">
         <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
         <noscript>
-
           <picture>
             <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
             <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
