Дополняет верстку адаптивны сеток

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -314,11 +314,13 @@
     </section>
 
     <section class="contacts">
-      <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
-      <address class="contacts__address-wrap">
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
-        <p class="contacts__address">Санкт-Петербург</p>
-      </address>
+      <div class="contants__inner-wrap">
+        <h2 class="contacts__title">Приглашаем<br>к сотрудничеству <br>дилеров!</h2>
+        <address>
+          <p class="contacts__address">ул. Большая <br>Конюшенная, д. 19/8</p>
+          <p class="contacts__address">Санкт-Петербург</p>
+        </address>
+      </div>
       <div class="contacts__map">
         <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
         <noscript>
