Стилизует шапку. Стилизует каталог

--- a/source/404.html
+++ b/source/404.html
@@ -26,11 +26,10 @@
         <img class="logo__text" src="images/logo-text-mobile.svg" alt="Cat Energy" width="101" height="18">
       </picture>
     </a>
-
+    <button class="main-header__menu-toggle" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
     <nav class="main-header__nav main-nav">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link" href="index.html">Главная</a>
