--- a/source/catalog.html
+++ b/source/catalog.html
@@ -23,14 +23,13 @@
       </picture>
       <picture>
         <source type="image/svg+xml" media="(min-width: 768px) and (max-width: 1439px)" srcset="images/logo-text-tablet.svg" width="101" height="18">
-        <img class="logo__text" src="images/logo-text-mobile.svg" alt="Cat Energy" width="101" height="18">
+        <img class="main-header__logo-text logo__text" src="images/logo-text-mobile.svg" alt="Cat Energy" width="101" height="18">
       </picture>
     </a>
-
+    <button class="main-header__menu-toggle" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
     <nav class="main-header__nav main-nav">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link" href="index.html">Главная</a>
