--- a/source/index.html
+++ b/source/index.html
@@ -123,15 +123,15 @@
         </picture>
         <picture>
           <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x" width="560" height="512">
-          <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" alt="Худой кот" width="280" height="256">
+          <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" alt="Худой кот" width="280" height="256" style="width: 50%;">
         </picture>
-        <div class="compare-slider__control">
-          <button class="compare-slider__control-button" type="button">
-            <span class="visually-hidden">
-              Переключить вид
-            </span>
-          </button>
-        </div>
+        <!-- <div class="compare-slider__control"> -->
+        <button class="compare-slider__control-button" type="button">
+          <span class="visually-hidden">
+            Переключить вид
+          </span>
+        </button>
+        <!-- </div> -->
       </div>
       <!-- </div> -->
 
