--- a/source/index.html
+++ b/source/index.html
@@ -57,7 +57,7 @@
   </header>
 
   <main class="main-container">
-    <section class="category">
+    <section class="category container">
       <h2 class="visually-hidden">Категории продукции</h2>
       <ul class="category__list">
         <li class="category__item category__item--slim">
@@ -76,7 +76,7 @@
       </ul>
     </section>
 
-    <section class="features">
+    <section class="features container">
       <h2 class="features__title section-title">Как это работает</h2>
 
       <ol class="features__list">
@@ -157,6 +157,7 @@
   </main>
 
   <footer class="main-footer">
+
     <a class="main-footer__logo logo" href="index.html">
       <!-- <img class="logo__text" src="images/logo-footer-mobile.svg" alt="Cat Energy" width="128" height="24"> -->
       <svg class="logo__text" width="128" height="24" viewBox="0 0 128 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
