--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,28 +14,30 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
-    <a class="main-header__logo logo" href="index.html">
-      <picture>
-        <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59">
-        <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="60" height="50">
-        <img class="logo__image" src="images/logo-mobile.svg" alt="Логотип сайта" width="33" height="38">
-      </picture>
-      <picture>
-        <source type="image/svg+xml" media="(min-width: 768px) and (max-width: 1439px)" srcset="images/logo-text-tablet.svg" width="101" height="18">
-        <img class="main-header__logo-text logo__text" src="images/logo-text-mobile.svg" alt="Cat Energy" width="101" height="18">
-      </picture>
-    </a>
-    <button class="main-header__menu-toggle" type="button">
-      <span class="visually-hidden">Открыть меню</span>
-    </button>
+  <header class="main-header main-header--nojs index-header__main-header">
+    <div class="main-header__logo container">
+      <a class="logo" href="index.html">
+        <picture>
+          <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59">
+          <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="60" height="50">
+          <img class="logo__image" src="images/logo-mobile.svg" alt="Логотип сайта" width="33" height="38">
+        </picture>
+        <picture>
+          <source type="image/svg+xml" media="(min-width: 768px) and (max-width: 1439px)" srcset="images/logo-text-tablet.svg" width="101" height="18">
+          <img class="main-header__logo-text logo__text" src="images/logo-text-mobile.svg" alt="Cat Energy" width="101" height="18">
+        </picture>
+      </a>
+      <button class="main-header__menu-toggle main-header__menu-toggle--close" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+    </div>
     <nav class="main-header__nav main-nav">
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a class="main-nav__link" href="index.html">Главная</a>
+          <a class="main-nav__link main-nav__link--current main-header__nav-link" href="index.html">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--current" href="catalog.html" aria-current="page">Каталог продукции</a>
+          <a class="main-nav__link" href="catalog.html" aria-current="page">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="program.html">Подбор программы</a>
