--- a/source/index.html
+++ b/source/index.html
@@ -14,46 +14,52 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header main-header--nojs">
-    <a class="main-header__logo logo" href="index.html">
-      <picture>
-        <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59">
-        <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="60" height="50">
-        <img class="logo__image" src="images/logo-mobile.svg" alt="Логотип сайта" width="33" height="38">
-      </picture>
-      <picture>
-        <source type="image/svg+xml" media="(min-width: 768px) and (max-width: 1439px)" srcset="images/logo-text-tablet.svg" width="101" height="18">
-        <img class="main-header__logo-text logo__text" src="images/logo-text-mobile.svg" alt="Cat Energy" width="101" height="18">
-      </picture>
-    </a>
-    <button class="main-header__menu-toggle main-header__menu-toggle--close" type="button">
-      <span class="visually-hidden">Открыть меню</span>
-    </button>
-    <nav class="main-header__nav main-nav">
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--current" href="index.html" aria-current="page">Главная</a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="program.html">Подбор программы</a>
-        </li>
-      </ul>
-    </nav>
+  <header class="index-header">
+    <div class="main-header main-header--nojs index-header__main-header">
+      <div class="main-header__logo container">
+        <a class="logo" href="index.html">
+          <picture>
+            <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59">
+            <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="60" height="50">
+            <img class="logo__image" src="images/logo-mobile.svg" alt="Логотип сайта" width="33" height="38">
+          </picture>
+          <picture>
+            <source type="image/svg+xml" media="(min-width: 768px) and (max-width: 1439px)" srcset="images/logo-text-tablet.svg" width="101" height="18">
+            <img class="main-header__logo-text logo__text" src="images/logo-text-mobile.svg" alt="Cat Energy" width="101" height="18">
+          </picture>
+        </a>
+        <button class="main-header__menu-toggle main-header__menu-toggle--close" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+      </div>
+      <nav class="main-header__nav main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--current main-header__nav-link" href="index.html" aria-current="page">Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="program.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
     <h1 class="visually-hidden">Cat Energy</h1>
-    <section class="main-header__hero hero">
-      <h2 class="hero__title section-title">Функциональное питание для котов</h2>
-      <p class="hero__desc">Занялся собой? Займись котом!</p>
-      <picture>
-        <source type="image/png" media="(min-width: 1440px)" srcset="images/hero-desktop@1x.png 1x, images/hero-desktop@2x.png 2x" width="552" height="499">
-        <source type="image/png" media="(min-width: 768px)" srcset="images/hero-tablet@1x.png 1x, images/hero-tablet@2x.png 2x" width="709" height="609">
-        <img class="hero__image" src="images/hero-mobile@1x.png" srcset="images/hero-mobile@2x.png 2x" alt="Упаковка еды Cat Energy Курица" width="280" height="270">
-      </picture>
-      <a class="hero__button button" href="#">Подобрать программу</a>
-    </section>
+    <!-- <section class="index-header__hero"> -->
+    <div class="index-header__hero-text-wrap">
+      <h2 class="index-header__hero-title section-title">Функциональное питание для котов</h2>
+      <p class="index-header__hero-desc">Занялся собой? Займись котом!</p>
+    </div>
+    <picture>
+      <source type="image/png" media="(min-width: 1440px)" srcset="images/hero-desktop@1x.png 1x, images/hero-desktop@2x.png 2x" width="552" height="499">
+      <source type="image/png" media="(min-width: 768px)" srcset="images/hero-tablet@1x.png 1x, images/hero-tablet@2x.png 2x" width="709" height="609">
+      <img class="index-header__hero-image" src="images/hero-mobile@1x.png" srcset="images/hero-mobile@2x.png 2x" alt="Упаковка еды Cat Energy Курица" width="280" height="270">
+    </picture>
+    <a class="index-header__hero-button button" href="#">Подобрать программу</a>
+    <!-- </section> -->
   </header>
 
   <main class="main-container">
