Исправляет мелкие ошибки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
 
 <body class="page__body">
   <header class="main-header main-header--nojs index-header__main-header">
-    <div class="main-header__logo container">
+    <div class="main-header__logo">
       <a class="logo" href="index.html">
         <picture>
           <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59">
