Исправляет ошибку бэм

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header main-header--nojs index-header__main-header">
+  <header class="main-header main-header--nojs ">
     <div class="main-header__logo">
       <a class="logo" href="index.html">
         <picture>
