--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
       </div>
-      <nav class="main-header__nav main-nav">
+      <nav class="main-header__nav main-nav index-header__main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link main-nav__link--current main-header__nav-link" href="index.html" aria-current="page">Главная</a>
