--- a/source/catalog.html
+++ b/source/catalog.html
@@ -271,35 +271,38 @@
 
     <section class="catalog-extra">
       <h2 class="catalog-extra__title section-subtitle">Дополнительные товары</h2>
-      <ul class="catalog-extra__list container">
-        <li class="catalog-extra__item product">
-          <h3 class="product__title">Сахарозаменитель</h3>
-          <p class="product__count">1 упаковка (100 г)</p>
-          <p class="product__price">200 <span>&#8381;</span></p>
-          <button class="product__button button" type="button">Заказать</button>
-        </li>
-        <li class="catalog-extra__item product">
-          <h3 class="product__title">Питьевая вода</h3>
-          <p class="product__count">5 литров</p>
-          <p class="product__price">50 <span>&#8381;</span></p>
-          <button class="product__button button" type="button">Заказать</button>
-        </li>
-        <li class="catalog-extra__item product">
-          <h3 class="product__title">Молоко</h3>
-          <p class="product__count">1 литр</p>
-          <p class="product__price">100 <span>&#8381;</span></p>
-          <button class="product__button button" type="button">Заказать</button>
-        </li>
-        <li class="catalog-extra__item product">
-          <h3 class="product__title">Витамины</h3>
-          <p class="product__count">1 упаковка (30 г)</p>
-          <p class="product__price">300 <span>&#8381;</span></p>
-          <button class="product__button button" type="button">Заказать</button>
-        </li>
-      </ul>
-      <div class="catalog-extra__promotion container">
-        <p class="catalog-extra__promotion-text">Закажите все и получите чехол для кота в подарок!</p>
+      <div class="catalog-extra__inner-wrap container">
+        <ul class="catalog-extra__list">
+          <li class="catalog-extra__item product">
+            <h3 class="product__title">Сахарозаменитель</h3>
+            <p class="product__count">1 упаковка (100 г)</p>
+            <p class="product__price">200 <span>&#8381;</span></p>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+          <li class="catalog-extra__item product">
+            <h3 class="product__title">Питьевая вода</h3>
+            <p class="product__count">5 литров</p>
+            <p class="product__price">50 <span>&#8381;</span></p>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+          <li class="catalog-extra__item product">
+            <h3 class="product__title">Молоко</h3>
+            <p class="product__count">1 литр</p>
+            <p class="product__price">100 <span>&#8381;</span></p>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+          <li class="catalog-extra__item product">
+            <h3 class="product__title">Витамины</h3>
+            <p class="product__count">1 упаковка (30 г)</p>
+            <p class="product__price">300 <span>&#8381;</span></p>
+            <button class="product__button button" type="button">Заказать</button>
+          </li>
+        </ul>
+        <div class="catalog-extra__promotion">
+          <p class="catalog-extra__promotion-text">Закажите все и получите чехол для кота в подарок!</p>
+        </div>
       </div>
+
     </section>
 
     <section class="subscribe">
@@ -322,7 +325,7 @@
         </address>
       </div>
       <div class="contacts__map">
-        <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+        <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
         <noscript>
           <picture>
             <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
