--- a/source/index.html
+++ b/source/index.html
@@ -150,7 +150,7 @@
         </address>
       </div>
       <div class="contacts__map">
-        <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
+        <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=true"></script>
         <noscript>
           <picture>
             <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
