Дорабатывает оставшиеся адаптивные сетки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -317,7 +317,7 @@
     </section>
 
     <section class="contacts">
-      <div class="contacts__inner-wrap">
+      <div class="contacts__inner-wrap contacts__inner-wrap--with-bg ">
         <h2 class="contacts__title">Приглашаем<br>к сотрудничеству <br>дилеров!</h2>
         <address>
           <p class="contacts__address">ул. Большая <br>Конюшенная, д. 19/8</p>
