--- a/source/404.html
+++ b/source/404.html
@@ -15,8 +15,8 @@
 
 <body class="page__body">
   <header class="main-header main-header--nojs">
-    <div class="main-header__logo">
-      <a class="logo" href="index.html">
+    <div class="main-header__logo-wrapper">
+      <a class="logo main-header__logo" href="index.html">
         <picture>
           <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59">
           <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="60" height="50">
