Дорабатывает мелкие сетки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,8 +14,8 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header main-header--nojs">
-    <div class="main-header__logo-wrapper container">
+  <header class="main-header main-header--nojs container">
+    <div class="main-header__logo-wrapper">
       <a class="logo main-header__logo" href="index.html">
         <picture>
           <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59">
