--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
       <nav class="main-header__nav main-nav index-header__main-nav main-header__nav--open">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--current" href="index.html" aria-current="page">Главная</a>
+            <a class="main-nav__link main-nav__link--current main-nav__link--current-with-bg" href="index.html" aria-current="page">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
