Исправляет шапку, исправляет отступы для декстопа.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header main-header--nojs container">
+  <header class="main-header main-header--nojs ">
     <div class="main-header__logo-wrapper">
       <a class="logo main-header__logo" href="index.html">
         <picture>
@@ -258,7 +258,7 @@
 
         <li class="catalog__item catalog__item--more">
           <div class="product-card product-card--more">
-            <h3 class="product-card__title product-card__title--icon-plus">Показать еще 100500 товаров</h3>
+            <h3 class="product-card__title product-card__title--more">Показать еще 100500 товаров</h3>
             <p class="product-card__desc ">
               На самом деле вкусов гораздо больше!
             </p>
