Добавляет фоновые изображения, декор для подзаголовков. Подгоняет под пиксель-перфект

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -270,7 +270,9 @@
     </section>
 
     <section class="catalog-extra">
-      <h2 class="catalog-extra__title section-subtitle">Дополнительные товары</h2>
+      <div class="section-subtitle section-subtitle--with-bg catalog-extra__title">
+        <h2 class=" section-subtitle__text">Дополнительные товары</h2>
+      </div>
       <div class="catalog-extra__inner-wrap container">
         <ul class="catalog-extra__list">
           <li class="catalog-extra__item product">
@@ -306,7 +308,9 @@
     </section>
 
     <section class="subscribe">
-      <h2 class="subscribe__title section-subtitle">Акции и новинки</h2>
+      <div class="section-subtitle subscribe__title">
+        <h2 class=" section-subtitle__text">Акции и новинки</h2>
+      </div>
       <p class="subscribe__desc container">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
 
       <form class="subscribe__form container" action="https://echo.htmlacademy.ru/" method="post">
