Добавляет резиновость для карты-изображения. Исправляет мелкие недочеты

--- a/source/404.html
+++ b/source/404.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header main-header--nojs">
+  <header class="main-header main-header--nojs ">
     <div class="main-header__logo-wrapper">
       <a class="logo main-header__logo" href="index.html">
         <picture>
@@ -37,7 +37,7 @@
           <a class="main-nav__link" href="index.html">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--current" href="catalog.html" aria-current="page">Каталог продукции</a>
+          <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="program.html">Подбор программы</a>
@@ -45,7 +45,7 @@
       </ul>
     </nav>
   </header>
-  <main class="main-container">
+  <main class="main-container container">
     <h1>404</h1>
     <p>Страница не найдена. <a href="/">Перейти на главную</a>.</p>
   </main>
