--- a/source/catalog.html
+++ b/source/catalog.html
@@ -283,7 +283,7 @@
         <li class="catalog__item catalog__item--more">
           <div class="product-card product-card--more">
             <h3 class="product-card__title product-card__title--more">Показать еще 100500 товаров</h3>
-            <p class="product-card__desc ">
+            <p class="product-card__desc product-card__desc--more">
               На самом деле вкусов гораздо больше!
             </p>
             <a class="product-card__button button button--secondary" href="#">Показать все</a>
